Saco una tilde del config

--- a/src/common/config.yaml
+++ b/src/common/config.yaml
@@ -123,7 +123,7 @@ Ataque Aereo:
     Radio: 2
   CantidadFragmentos: 0
 
-Teletransportación:
+Teletransportacion:
   ConMira: false
   EsCuerpoACuerpo: false
   TienePotenciaVariable: false
