Nueva refactorización de animaciones
Polimorfismo para hacer más fácil la inicialización y manejo de animaciones.
Se implementó un ángulo ficticio para probar animaciones de apuntar.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,6 +138,7 @@ add_executable(client
   "${CLIENTDIR}/camara.cpp"
   "${CLIENTDIR}/accioncliente.cpp"
   "${CLIENTDIR}/dibujador.cpp"
+  "${CLIENTDIR}/gestoranimaciones.cpp"
 
   # Socket
   "${COMMONDIR}/resolvererror.cpp"
