--- a/src/common/config.yaml
+++ b/src/common/config.yaml
@@ -50,11 +50,11 @@ Granada Roja:
   EsTeledirigido: false
   EsAfectadaPorViento: false
   Municiones: 10
-  Danio (del estallido principal): 
+  Danio: 
     Epicentro: 30
     Radio: 2
   CantidadFragmentos: 6
-  DanioFragmentos: 
+  DanioFragmento: 
     Epicentro: 10
     Radio: 2
 
@@ -119,7 +119,7 @@ Ataque Aereo:
   EsTeledirigido: true
   EsAfectadaPorViento: true
   Municiones: 2
-  Danio (por cada misil): 
+  Danio: 
     Epicentro: 40
     Radio: 2
   CantidadFragmentos: 0
