Primera implementación de sonidos
Se transformó el gestor de animaciones en un gestor multimedia.
Los sonidos se reproducen al comienzo de las animaciones o durante algun momento específico en casos especiales.
El volumen puede ser bajado y subido con las teclas menos y más respectivamente, o bien muteado con la tecla M.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,8 +147,9 @@ add_executable(client
   "${CLIENTDIR}/camara.cpp"
   "${CLIENTDIR}/accioncliente.cpp"
   "${CLIENTDIR}/dibujador.cpp"
-  "${CLIENTDIR}/gestoranimaciones.cpp"
+  "${CLIENTDIR}/gestormultimedia.cpp"
   "${CLIENTDIR}/controliteracion.cpp"
+  "${CLIENTDIR}/sonido.cpp"
 
   # Socket
   "${COMMONDIR}/resolvererror.cpp"
