Comento la parte de "on" para que toda las actions corran en todas las ramas
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -2,13 +2,13 @@
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
 name: CMake on a single platform
 
-on:
-  push:
-    branches-ignore:
-      - "main"
-  pull_request:
-    branches-ignore:
-          - "main"
+# on:
+#   push:
+#     branches-ignore:
+#       - "main"
+#   pull_request:
+#     branches-ignore:
+#           - "main"
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
