[WIP] Refactor grande: dibujador -> varias entidades
La clase dibujador ya no existe. Se reversionó el concepto de control de iteradores
a control de entidades. Las entidades controlan la iteración en la que están y también
se encargan de dibujarse. El control de entidades se encarga de que estén actualizadas
según el estado de juego.
Los gestores de animaciones y de sonidos ya no dibujan/reproducen sus recursos, ahora
los devuelven para que sean utilizados.

Fix #121 Fix #119

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,19 +137,27 @@ target_link_libraries(server PRIVATE yaml-cpp)
 #Ejecutable del cliente
 add_executable(client
   "${CLIENTDIR}/main.cpp"
-  "${CLIENTDIR}/entradateclado.cpp"
+  "${CLIENTDIR}/entradaTeclado.cpp"
   "${CLIENTDIR}/enviador.cpp"
   "${CLIENTDIR}/recibidor.cpp"
   "${CLIENTDIR}/cliente.cpp"
   "${CLIENTDIR}/menu.cpp"
   "${CLIENTDIR}/animacion.cpp"
   "${CLIENTDIR}/camara.cpp"
-  "${CLIENTDIR}/accioncliente.cpp"
-  "${CLIENTDIR}/dibujador.cpp"
-  "${CLIENTDIR}/gestormultimedia.cpp"
-  "${CLIENTDIR}/controliteracion.cpp"
+  "${CLIENTDIR}/accionCliente.cpp"
+  "${CLIENTDIR}/gestorAnimaciones.cpp"
+  "${CLIENTDIR}/gestorSonidos.cpp"
+  "${CLIENTDIR}/controlEntidades.cpp"
   "${CLIENTDIR}/sonido.cpp"
   "${CLIENTDIR}/configuracionCliente.cpp"
+  "${CLIENTDIR}/entidades/entidad.cpp"
+  "${CLIENTDIR}/entidades/entidadActualizable.cpp"
+  "${CLIENTDIR}/entidades/entidadAgua.cpp"
+  "${CLIENTDIR}/entidades/entidadGusano.cpp"
+  "${CLIENTDIR}/entidades/entidadEscenario.cpp"
+  "${CLIENTDIR}/entidades/entidadProyectil.cpp"
+  "${CLIENTDIR}/entidades/entidadVigas.cpp"
+  "${CLIENTDIR}/entidades/entidadInterfaz.cpp"
 
   # Socket
   "${COMMONDIR}/resolvererror.cpp"
