Agrego mapas al yaml y los leo en el struct mapas Actualizo como se crean las vigas y posicion de gusanos para que sea mas compacto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,7 @@ add_executable(server
   "${SERVERDIR}/aceptador.cpp"
   "${SERVERDIR}/monitorPartida.cpp"
   "${SERVERDIR}/arma.cpp"
+  "${SERVERDIR}/mapa.cpp"
 
   # Protocolo
   "${COMMONDIR}/protocolo.cpp"
