Anado implementacion de buscar un lugar random
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ add_executable(server
   "${SERVERDIR}/monitorPartida.cpp"
   "${SERVERDIR}/arma.cpp"
   "${SERVERDIR}/mapa.cpp"
+  "${SERVERDIR}/provision.cpp"
 
   # Protocolo
   "${COMMONDIR}/protocolo.cpp"
