Provisiones en cliente
Implementacion de entidad provision y sus texturas/sonidos.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,7 @@ add_executable(client
   "${CLIENTDIR}/entidades/entidadGusano.cpp"
   "${CLIENTDIR}/entidades/entidadEscenario.cpp"
   "${CLIENTDIR}/entidades/entidadProyectil.cpp"
+  "${CLIENTDIR}/entidades/entidadProvision.cpp"
   "${CLIENTDIR}/entidades/entidadVigas.cpp"
   "${CLIENTDIR}/entidades/entidadInterfaz.cpp"
 
