Anado los archivos resolvedores y muevo los resolvedores ahi
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ add_executable(server
   "${SERVERDIR}/arma.cpp"
   "${SERVERDIR}/mapa.cpp"
   "${SERVERDIR}/provision.cpp"
+  "${SERVERDIR}/resolvedores.cpp"
 
   # Protocolo
   "${COMMONDIR}/protocolo.cpp"
