[WIP] mas config, seguimos en la misma de antes

--- a/src/common/config.yaml
+++ b/src/common/config.yaml
@@ -9,13 +9,13 @@ Viento:
 
 Metros sin danio: 5.0
 Degtorad: 0.0174532925199432957
-Ancho viga: 0.8
+# Ancho viga: 0.8
 
 Velocidad movimiento: 5.0
 Masa cuerpo estatico: 0.0
 Distancia entre vigas: 7
 
-Tamanio gusano: 20
+# Tamanio gusano: 20
 Potencia salto: 3.0
 Vida gusano: 100
 
@@ -30,6 +30,7 @@ Viento maximo:
   Y: -10
 Tiempo turno: 60
 Tiempo changui: 3
+
 
 # # Cliente # #
 Dimensiones pantalla:
