Como dijo :sunflower: , son muchos archivos, pero calma, solamente anado el yaml al server
Signed-off-by: Tomas Fabrizio Orsi <torsi@fi.uba.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,8 @@ add_executable(server
   #Thread safe queue
   "${COMMONDIR}/queue.h"
   
-  #Armas
+  # Server
+  "${SERVERDIR}/configServer.cpp"
 )
 ## Macros para pasarle al server
 target_compile_definitions(server PUBLIC
